Add Volvo project folder structure and update image paths

--- a/volvo.html
+++ b/volvo.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="hero-image shadow-default">
-                <img src="assets/images/Volvo/Cover-Volvo.png" alt="Volvo Project Hero Image">
+                <img src="assets/images/volvo/hero.jpg" alt="Volvo Project Hero Image">
             </div>
 
             <div class="section">
@@ -67,7 +67,7 @@
                 </div>
                 <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="section-image shadow-default">
-                    <img src="assets/images/volvo-process.jpg" alt="Volvo Design Process">
+                    <img src="assets/images/volvo/process.jpg" alt="Volvo Design Process">
                 </div>
             </div>
 
@@ -81,13 +81,13 @@
                 <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="image-grid">
                     <div class="image-grid-item shadow-default">
-                        <img src="assets/images/volvo-solution1.jpg" alt="Volvo Solution 1">
+                        <img src="assets/images/volvo/solution1.jpg" alt="Volvo Solution 1">
                     </div>
                     <div class="image-grid-item shadow-default">
-                        <img src="assets/images/volvo-solution2.jpg" alt="Volvo Solution 2">
+                        <img src="assets/images/volvo/solution2.jpg" alt="Volvo Solution 2">
                     </div>
                     <div class="image-grid-item shadow-default">
-                        <img src="assets/images/volvo-solution3.jpg" alt="Volvo Solution 3">
+                        <img src="assets/images/volvo/solution3.jpg" alt="Volvo Solution 3">
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                             <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="section-image shadow-default">
-                            <img src="assets/images/volvo-tech1.jpg" alt="Technical Implementation">
+                            <img src="assets/images/volvo/tech1.jpg" alt="Technical Implementation">
                         </div>
                     </div>
                     <div class="stacked-image-item">
@@ -117,7 +117,7 @@
                             <p style="font-size: var(--body---large)">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="section-image shadow-default">
-                            <img src="assets/images/volvo-tech2.jpg" alt="User Testing">
+                            <img src="assets/images/volvo/tech2.jpg" alt="User Testing">
                         </div>
                     </div>
                 </div>
