Volvo project almost finished. Need to fix spacings and typography

--- a/project-template.html
+++ b/project-template.html
@@ -126,6 +126,26 @@
         </div>
     </div>
 
+    <div class="stacked-images">
+        <div class="stacked-image-item">
+            <div class="section-image shadow-default">
+                <img src="assets/images/volvo/spread rule.png" alt="Project image 1">
+            </div>
+            <div class="stacked-image-text">
+                <p class="nokora-light">Image description 1</p>
+            </div>
+        </div>
+        <div class="stacked-image-item">
+            <div class="section-image shadow-default">
+                <img src="assets/images/volvo/spread rule unlock.png
+                " alt="Project image 2">
+            </div>
+            <div class="stacked-image-text">
+                <p class="nokora-light">Image description 2</p>
+            </div>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="left">
             <h3>Left side</h3>
