--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <div class="footer">
         <div class="left">
-            <h3>Left side</h3>
+            <h3 id="last-commit">Loading last commit...</h3>
             <h3>Left Side</h3>
         </div>
         <div class="right">
@@ -285,6 +285,7 @@
 
 
 <script src="index.js"></script>
+<script src="js/git-info.js"></script>
       
 </body>
 
