--- a/project-template.html
+++ b/project-template.html
@@ -148,7 +148,7 @@
 
     <div class="footer">
         <div class="left">
-            <h3>Left side</h3>
+            <h3 id="last-commit">Loading last commit...</h3>
             <h3>Left Side</h3>
         </div>
         <div class="right">
@@ -158,6 +158,7 @@
     </div>
 
     <script src="index.js"></script>
+    <script src="js/git-info.js"></script>
 </body>
 
 </html> 
