--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
 
     <div class="top_nav">
         <div class="left">
-            <h1><a href="index.html">Maximilian Relam Wide</a></h1>
+            <h1><a href="index.html" class="button name-link">Maximilian Relam Wide</a></h1>
         </div>
 
         <div class="right">
-            <h3><a href="work.html">Work</a></h3>
-            <h3><a href="about.html">About</a></h3>
-            <h3><a href="contact.html">Contact</a></h3>
+            <a href="work.html" class="button text-button">Work</a>
+            <a href="about.html" class="button text-button active">About</a>
+            <a href="contact.html" class="button text-button">Contact</a>
         </div>
     </div>
 
@@ -38,12 +38,12 @@
             
                 <div class="bio">
                     <div class="intro">
-                        <h2>
+                        <div class="bio-text">
                             I'm Max, a UX / UI designer based in Gothenburg, Sweden with a background in digital design
                             & digital media. I enjoy exploring what is unknown to me and finding new interests, which I believe
                             gives me a
                             greater understanding of the big picture.
-                        </h2>
+                        </div>
                     </div>
                     <div class="divider"></div>
                     <div class="short-text">
@@ -63,9 +63,7 @@
                                 dabbling in photography, music, or recharging my spirit by sungazing.
                             </p>
                             <div>
-                                <a href="https://www.linkedin.com/in/maximilianrelam/" target="_blank">
-                                    <button class="button text-button bold-text">Linkedin</button>
-                                </a>
+                                <a href="https://www.linkedin.com/in/maximilianrelam/" target="_blank">Linkedin</a>
                             </div>
                         </div>
 
