--- a/volvo.html
+++ b/volvo.html
@@ -27,9 +27,9 @@
         </div>
 
         <div class="right">
-            <h3><a href="work.html">Work</a></h3>
-            <h3><a href="about.html">About</a></h3>
-            <h3><a href="contact.html">Contact</a></h3>
+            <a href="work.html" class="button text-button active">Work</a>
+            <a href="about.html" class="button text-button">About</a>
+            <a href="contact.html" class="button text-button">Contact</a>
         </div>
     </div>
 
