Update image paths and improve HTML structure across multiple pages; replaced local feather icons script with CDN, updated profile picture alt text, and removed unused image file.

--- a/about.html
+++ b/about.html
@@ -11,12 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/feather-icons"></script>
-
-
     
     <title>About</title>
-    </head>
+</head>
 
 <body>
 
@@ -70,7 +67,7 @@
                     </div>
                 </div>
                 <div class="profile-pic">
-                    <!-- <img class="profile-pic" src="assets/images/Avatar.svg" alt=""> -->
+                    <img src="assets/images/Avatar.svg" alt="Profile picture">
                 </div>
 
             </div>
@@ -91,7 +88,9 @@
         </div>
     </div>
 
-
+    <!-- Load Feather Icons first -->
+    <script src="https://unpkg.com/feather-icons"></script>
+    <!-- Then load our custom JavaScript -->
     <script src="js/index.js"></script>
 </body>
 
