--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         About me
                     </div>
                     <div class="intro">
-                        <img class="avatar" src="assets/images/Avatar.svg" alt="">
-                        <p>I'm Maximilian, a UX / UI designer based in Gothenburg, Sweden with a background in digital design & digital media. I
+                        <img class="avatar" src="assets/images/Avatar.svg" alt="Profile picture">
+                        <p>I'm Maximilian, a UX / UI designer based in Gothenburg, Sweden with a background in digital design & digital media. I
                             enjoy exploring what is unknown to me and finding new interests, which I believe gives me a greater understanding of
                             the big picture.</p>
                     </div>
@@ -135,11 +135,11 @@
                             </div>
                             <div class="list-row">
                                 <div class="left-title big">
-                                    <p>Coop Insights</p>             
+                                    <p><a href="coop.html">Coop Insights</a></p>             
                                 </div>
-                                <button class="arrowBtn">
+                                <a href="coop.html" class="arrowBtn">
                                     <i class="feather-16" data-feather="arrow-right"></i>
-                                </button>
+                                </a>
                             </div>
 
 
@@ -195,11 +195,12 @@
                     
                 </div>
                 <div class="content-block featured-project">
-                    <a href="#" class="featured-project-link">
+                    <a href="coop.html" class="featured-project-link">
                         <div class="titles">
                             <div class="card-title">Coop Insights</div>
                             <div class="card-title second">Tag 2</div>
                         </div>
+                        <img src="assets/images/Coop/coop-insights-cover.png" alt="Coop Insights Project">
                     </a>
                 </div>
                 <div class="content-block motto">
