--- a/work.html
+++ b/work.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <script src="node_modules/feather-icons/dist/feather.js"></script>
     <title>Work - Max Portfolio</title>
 </head>
 
@@ -52,7 +51,10 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <!-- Load Feather Icons first -->
+    <script src="https://unpkg.com/feather-icons"></script>
+    <!-- Then load our custom JavaScript -->
+    <script src="js/index.js"></script>
 </body>
 
 </html> 
