--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             </div>
                             <div class="list-row">
                                 <div class="left-title big">
-                                    <p><a href="coop.html">Coop Insights</a></p>             
+                                    <p>Coop Insights</p>             
                                 </div>
                                 <a href="coop.html" class="arrowBtn">
                                     <i class="feather-16" data-feather="arrow-right"></i>
@@ -285,10 +285,14 @@
         </div>
     </div>
 
-
-<script src="index.js"></script>
-<script src="js/git-info.js"></script>
-      
+    <!-- Load Feather Icons first -->
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script>
+        // Initialize Feather Icons
+        feather.replace();
+    </script>
+    <!-- Then load our custom JavaScript -->
+    <script src="js/index.js"></script>
 </body>
 
 </html>
