--- a/about.html
+++ b/about.html
@@ -13,6 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     
     <title>About</title>
+    <style>
+        body {
+            background-color: var(--color-neutral-background);
+        }
+    </style>
 </head>
 
 <body>
