--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="node_modules/feather-icons/dist/feather.js"></script>
     <title>Contact - Max Portfolio</title>
+    <style>
+        body {
+            background-color: var(--color-neutral-background);
+        }
+    </style>
 </head>
 
 <body>
