--- a/volvo.html
+++ b/volvo.html
@@ -23,7 +23,7 @@
 <body>
     <div class="top_nav">
         <div class="left">
-            <h1><a href="index.html">Maximilian Relam Wide</a></h1>
+            <h1><a href="index.html" class="button name-link">Maximilian Relam Wide</a></h1>
         </div>
 
         <div class="right">
