Refactor multiple HTML files to remove top navigation code, update script paths for improved organization, and implement Feather Icons CDN with initialization for each page.

--- a/index.html
+++ b/index.html
@@ -28,18 +28,6 @@
 
     
 
-    <div class="top_nav">
-        <div class="left">
-            <h1><a href="index.html" class="button name-link">Maximilian Relam Wide</a></h1>
-        </div>
-
-        <div class="right">
-            <a href="work.html" class="button text-button">Work</a>
-            <a href="about.html" class="button text-button">About</a>
-            <a href="contact.html" class="button text-button">Contact</a>
-        </div>
-    </div>
-
     <div class="section">
         <div class="container">
             <div class="grid grid-homepage">
@@ -299,6 +287,14 @@
     </script>
     <!-- Then load our custom JavaScript -->
     <script src="js/index.js"></script>
+    <script src="js/git-info.js"></script>
+    <script src="js/nav.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            feather.replace();
+            initNavigation('home');
+        });
+    </script>
 </body>
 
 </html>
