--- a/volvo.html
+++ b/volvo.html
@@ -21,18 +21,6 @@
 </head>
 
 <body>
-    <div class="top_nav">
-        <div class="left">
-            <h1><a href="index.html" class="button name-link">Maximilian Relam Wide</a></h1>
-        </div>
-
-        <div class="right">
-            <a href="work.html" class="button text-button active">Work</a>
-            <a href="about.html" class="button text-button">About</a>
-            <a href="contact.html" class="button text-button">Contact</a>
-        </div>
-    </div>
-
     <div class="section">
         <div class="container">
             <div class="back-button">
@@ -236,9 +224,11 @@
 
     <script src="index.js"></script>
     <script src="js/git-info.js"></script>
+    <script src="js/nav.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             feather.replace();
+            initNavigation('work');
         });
     </script>
 </body>
