--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     
-    <title>About</title>
+    <title>About - Max Portfolio</title>
     <style>
         body {
             background-color: var(--color-neutral-background);
@@ -21,19 +21,6 @@
 </head>
 
 <body>
-
-    <div class="top_nav">
-        <div class="left">
-            <h1><a href="index.html" class="button name-link">Maximilian Relam Wide</a></h1>
-        </div>
-
-        <div class="right">
-            <a href="work.html" class="button text-button">Work</a>
-            <a href="about.html" class="button text-button active">About</a>
-            <a href="contact.html" class="button text-button">Contact</a>
-        </div>
-    </div>
-
     <div class="section">
         <div class="container-smaller">
             <div class="grid grid-about">
@@ -96,7 +83,15 @@
     <!-- Load Feather Icons first -->
     <script src="https://unpkg.com/feather-icons"></script>
     <!-- Then load our custom JavaScript -->
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
+    <script src="js/git-info.js"></script>
+    <script src="js/nav.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            feather.replace();
+            initNavigation('about');
+        });
+    </script>
 </body>
 
 </html>
