--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <script src="node_modules/feather-icons/dist/feather.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
     <title>Contact - Max Portfolio</title>
     <style>
         body {
@@ -21,21 +21,9 @@
 </head>
 
 <body>
-    <div class="top_nav">
-        <div class="left">
-            <h1><a href="index.html">Maximilian Relam Wide</a></h1>
-        </div>
-
-        <div class="right">
-            <a href="work.html" class="button text-button">Work</a>
-            <a href="about.html" class="button text-button">About</a>
-            <a href="contact.html" class="button text-button">Contact</a>
-        </div>
-    </div>
-
     <div class="section">
         <div class="container">
-            <div class="grid">
+            <div class="grid grid-contact">
                 <div class="content-block">
                     <div class="card-title">
                         Contact Me
@@ -58,6 +46,14 @@
     </div>
 
     <script src="index.js"></script>
+    <script src="js/git-info.js"></script>
+    <script src="js/nav.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            feather.replace();
+            initNavigation('contact');
+        });
+    </script>
 </body>
 
 </html> 
