--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         About me
                     </div>
                     <div class="intro">
-                        <img class="avatar" src="assets/images/Avatar.svg" alt="Profile picture">
+                        <img class="avatar" src="assets/images/sun-glasses.svg" alt="Profile picture">
                         <p>I'm Maximilian, a UX / UI designer based in Gothenburg, Sweden with a background in digital design & digital media. I
                             enjoy exploring what is unknown to me and finding new interests, which I believe gives me a greater understanding of
                             the big picture.</p>
