Refactor about.html to reposition joy section header and comment out profile picture; update main.css to add padding for bounce h2 element.

--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
         body {
             background-color: var(--color-neutral-background);
         }
+
+
     </style>
 </head>
 
@@ -59,15 +61,14 @@
                     </div>
                 </div>
                 <div class="profile-pic">
-                    <img src="assets/images/Avatar.svg" alt="Profile picture">
+                    <!-- <img src="assets/images/Avatar.svg" alt="Profile picture"> -->
                 </div>
 
             </div>
 
             <div class="wrapper">
-                <h2>Things that bring me joy</h2>
-
                 <div class="bounce">
+                    <h2>Things that bring me joy</h2>
                     <div class="word" id="word1">The Ocean</div>
                     <div class="word" id="word2">Animals</div>
                     <div class="word" id="word3">Music</div>
